[package]
name = "node-cli"
version = "2.0.0-rc4"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Generic Substrate node implementation in Rust."
build = "build.rs"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
default-run = "substrate"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[badges]
travis-ci = { repository = "paritytech/substrate" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "paritytech/substrate" }
is-it-maintained-open-issues = { repository = "paritytech/substrate" }

[[bin]]
name = "substrate"
path = "src/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.1" }
serde = { version = "1.0.102", features = ["derive"] }
futures = { version = "0.3.1", features = ["compat"] }
hex-literal = "0.2.1"
jsonrpc-core = "14.2.0"
log = "0.4.8"
rand = "0.7.2"
structopt = { version = "0.3.8", optional = true }
tracing = "0.1.10"
parking_lot = "0.10.0"

# primitives
sp-authority-discovery = { version = "2.0.0-rc4",  git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sp-consensus-babe = { version = "0.8.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
grandpa-primitives = { version = "2.0.0-rc4", package = "sp-finality-grandpa", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sp-core = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sp-runtime = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sp-timestamp = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sp-finality-tracker = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sp-inherents = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sp-keyring = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sp-io = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sp-consensus = { version = "0.8.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sp-transaction-pool = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }

# client dependencies
sc-client-api = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sc-chain-spec = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sc-consensus = { version = "0.8.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sc-transaction-pool = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sc-network = { version = "0.8.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sc-consensus-babe = { version = "0.8.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
grandpa = { version = "0.8.0-rc4", package = "sc-finality-grandpa", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sc-client-db = { version = "0.8.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sc-offchain = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sc-rpc = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sc-basic-authorship = { version = "0.8.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sc-service = { version = "0.8.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sc-tracing = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sc-telemetry = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sc-authority-discovery = { version = "0.8.0-rc4",  git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }

# frame dependencies
pallet-indices = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-timestamp = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-contracts = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
frame-system = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-balances = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-transaction-payment = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
frame-support = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-im-online = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-authority-discovery = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-staking = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-grandpa = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }

# node-specific dependencies
node-runtime = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
node-rpc = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
node-primitives = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
node-executor = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }

# CLI-specific dependencies
sc-cli = { version = "0.8.0-rc4", optional = true, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" , features = [ "wasmtime" ]}
frame-benchmarking-cli = { version = "2.0.0-rc4", optional = true, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
node-inspect = { version = "0.8.0-rc4", optional = true, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2.57", optional = true }
wasm-bindgen-futures = { version = "0.4.7", optional = true }
browser-utils = { package = "substrate-browser-utils", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4", optional = true, version = "0.8.0-rc4"}

[target.'cfg(target_arch="x86_64")'.dependencies]
node-executor = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4", features = [ "wasmtime" ] }
#sc-cli = { version = "0.8.0-rc4", optional = true, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4", features = [ "wasmtime" ] }
sc-service = { version = "0.8.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4", features = [ "wasmtime" ] }

[dev-dependencies]
sc-keystore = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sc-consensus = { version = "0.8.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sc-consensus-babe = { version = "0.8.0-rc4", features = ["test-helpers"], git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sc-consensus-epochs = { version = "0.8.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sc-service-test = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
futures = "0.3.4"
tempfile = "3.1.0"
assert_cmd = "1.0"
nix = "0.17"
serde_json = "1.0"
regex = "1"
platforms = "0.2.1"

[build-dependencies]
structopt = { version = "0.3.8", optional = true }
node-inspect = { version = "0.8.0-rc4", optional = true, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
frame-benchmarking-cli = { version = "2.0.0-rc4", optional = true, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
substrate-build-script-utils = { version = "2.0.0-rc4", optional = true, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }

[build-dependencies.sc-cli]
version = "0.8.0-rc4"
package = "sc-cli"
git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4"
branch = "2.0.0-rc4"
optional = true

[features]
default = [ "cli" ]
browser = [
    "browser-utils",
    "wasm-bindgen",
    "wasm-bindgen-futures",
]
cli = [
    "node-executor/wasmi-errno",
    "node-inspect",
    "sc-cli",
    "frame-benchmarking-cli",
    "sc-service/db",
    "structopt",
    "substrate-build-script-utils",
]
runtime-benchmarks = [
    "node-runtime/runtime-benchmarks",
    "frame-benchmarking-cli",
]
