[dependencies]

# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
integer-sqrt = { version = "0.1.2" }
serde = { version = "1.0.102", optional = true }
static_assertions = "1.1.0"
hex-literal = { version = "0.2.1", optional = true }

# primitives
sp-authority-discovery = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4"}
sp-consensus-babe = { version = "0.8.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sp-block-builder = { git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4", default-features = false, version = "2.0.0-rc4"}
sp-inherents = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
node-primitives = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sp-offchain = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sp-core = { version = "2.0.0-rc4", default-features = false,git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sp-std = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sp-api = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sp-runtime = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sp-staking = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sp-keyring = { version = "2.0.0-rc4", optional = true, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sp-session = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sp-transaction-pool = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
sp-version = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }

# frame dependencies
frame-executive = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
frame-benchmarking = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4", optional = true }
frame-support = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
frame-system = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
frame-system-benchmarking = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4", optional = true }
frame-system-rpc-runtime-api = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-authority-discovery = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-authorship = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-babe = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-balances = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-collective = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-contracts = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-contracts-primitives = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-contracts-rpc-runtime-api = { version = "0.8.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-democracy = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-elections-phragmen = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-finality-tracker = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-grandpa = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-im-online = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-indices = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-identity = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-membership = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-multisig = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-offences = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-offences-benchmarking = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4", default-features = false, optional = true }
pallet-proxy = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-randomness-collective-flip = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-recovery = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-session = { version = "2.0.0-rc4", features = ["historical"], git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4", default-features = false }
pallet-session-benchmarking = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4", default-features = false, optional = true }
pallet-staking = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-staking-reward-curve = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-scheduler = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-society = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-sudo = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-timestamp = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-treasury = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-utility = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-transaction-payment = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }
pallet-vesting = { version = "2.0.0-rc4", default-features = false, git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }


[dev-dependencies]
sp-io = { version = "2.0.0-rc4", git = "https://gitee.com/expedition2020/substrate-2.0.0-rc4", branch = "2.0.0-rc4" }

[features]
default = ["std"]
std = [
    "sp-authority-discovery/std",
    "pallet-authority-discovery/std",
    "pallet-authorship/std",
    "sp-consensus-babe/std",
    "pallet-babe/std",
    "pallet-balances/std",
    "sp-block-builder/std",
    "codec/std",
    "pallet-collective/std",
    "pallet-contracts/std",
    "pallet-contracts-primitives/std",
    "pallet-contracts-rpc-runtime-api/std",
    "pallet-democracy/std",
    "pallet-elections-phragmen/std",
    "frame-executive/std",
    "pallet-finality-tracker/std",
    "pallet-grandpa/std",
    "pallet-im-online/std",
    "pallet-indices/std",
    "sp-inherents/std",
    "pallet-membership/std",
    "pallet-multisig/std",
    "pallet-identity/std",
    "pallet-scheduler/std",
    "node-primitives/std",
    "sp-offchain/std",
    "pallet-offences/std",
    "pallet-proxy/std",
    "sp-core/std",
    "pallet-randomness-collective-flip/std",
    "sp-std/std",
    "serde",
    "pallet-session/std",
    "sp-api/std",
    "sp-runtime/std",
    "sp-staking/std",
    "pallet-staking/std",
    "sp-keyring",
    "sp-session/std",
    "pallet-sudo/std",
    "frame-support/std",
    "frame-benchmarking/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "pallet-treasury/std",
    "sp-transaction-pool/std",
    "pallet-utility/std",
    "sp-version/std",
    "pallet-society/std",
    "pallet-recovery/std",
    "pallet-vesting/std",
]



[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0-rc4'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
[build-dependencies.wasm-builder-runner]
git = 'https://gitee.com/expedition2020/substrate-2.0.0-rc4'
package = 'substrate-wasm-builder-runner'
tag = 'v2.0.0-rc4'
version = '1.0.5'
